--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-db.sqlite3
-geckodriver.log
-virtualenv/
+/db.sqlite3
+/geckodriver.log
+/virtualenv/
 __pycache__/
 *.pyc
-.vscode/
+/.vscode/
 .pylintrc
-.venv/
+/.venv/
