--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,1 @@
-astroid==2.0.4
-colorama==0.4.0
-Django==1.11.22
-isort==4.3.4
-lazy-object-proxy==1.3.1
-mccabe==0.6.1
-pylint==2.1.1
-pylint-django==2.0.2
-pylint-plugin-utils==0.4
-pytz==2018.7
-selenium==3.141.0
-six==1.11.0
-urllib3==1.24.2
-wrapt==1.10.11
+django<1.12
