--- a/deploy_tools/gunicorn-systemd.template.service
+++ b/deploy_tools/gunicorn-systemd.template.service
@@ -3,7 +3,7 @@ Description=Gunicorn server for DOMAIN
 
 [Service]
 Restart=on-failure
-User=elspeth
+User=skarbek
 WorkingDirectory=/home/skarbek/sites/DOMAIN
 EnvironmentFile=/home/skarbek/sites/DOMAIN/.env
 
